--- a/Markdown/常用.md
+++ b/Markdown/常用.md
@@ -193,4 +193,32 @@ nvm current
 
 ```text
 nvm uninstall 18
+
 ```
+## git的操作
+
+#### 将文件添加到本地库里面
+
+`git add .`
+
+#### 提交到本地库
+
+`git commit -m '第一次提交'`
+
+#### 关联远程库
+
+` git remote add origin https://github.com/80840814/Front-end-learning-notes.git`
+
+#### 将本地仓库的文件，提交到远程库里面
+
+`git push -u origin dev`
+
+#### 查当前库的操作
+
+`git remote -v`
+
+![截图_20230511080117](E:\Code\Front-end-learning-notes\Markdown\常用.assets\截图_20230511080117.png)
+
+推送到其他的平台，
+
+git push 库名字 “分支名”
