--- a/Markdown/常用.md
+++ b/Markdown/常用.md
@@ -222,3 +222,22 @@ nvm uninstall 18
 推送到其他的平台，
 
 git push 库名字 “分支名”
+
+对远程仓库进行更名：
+
+`git remote rename origin github`
+
+移除远程仓库：
+
+`git remote remove 远程仓库名`
+
+提交冲突的解决：
+
+![截图_20230511080658](E:\Code\Front-end-learning-notes\Markdown\常用.assets\截图_20230511080658.png)
+
+可以自动合并的冲突：
+
+`git pull`
+
+出现vim的编辑器，输入变更的内容，然后保存退出
+
