一起进行提交

--- a/Markdown/常用.md
+++ b/Markdown/常用.md
@@ -241,3 +241,8 @@ git push 库名字 “分支名”
 
 出现vim的编辑器，输入变更的内容，然后保存退出
 
+同时进行提交，更改.git-config的文件添加这样的数据：
+
+![截图_20230511083100](E:\Code\Front-end-learning-notes\Markdown\常用.assets\截图_20230511083100.png)
+
+`url = https://gitee.com/yixiaomo/front-end-learning-notes.git`
