--- a/Markdown/软件测试.md
+++ b/Markdown/软件测试.md
@@ -1,6 +1,863 @@
-# 实习-软件测试
+# 软件测试
 
-```mysql
+## 基础知识
+
+```typescript
+Select * from class;
+database b:
+```
+
+### 进制转换
+
+> ```
+> 1T=1024G
+> 
+> 1G=1024M
+> 
+> 1M=1024k
+> 
+> 1k=1024byte
+> 
+> 1byte=8bit
+> ```
+
+### 二进制&十进制
+
+### 二进制
+
+#### 逢二进一
+
+> 0001+0011=0100
+
+#### 二进制转十进制
+
+1011    `1*2^3+0*2^2+1*2^1+1*2^0`=11
+
+### 运算符
+
+#### 算数运算符
+
+`+ - * / % // `
 
 ```
+5/2=2....1
+5%2=1 取余数
+5//2=2 取整
+```
+
+#### 比较运算符
+
+`> < = >= <= != `
+
+#### 逻辑运算符
+
+`&&(全为真)    || （一个为真）    !（取反）`
+
+#### 优先级
+
+  `非> 与> 或`
+
+#### 短路的思想：（提高性能）
+
+与：如果第一个不成立。第二个不会判断
+
+或：第一个为真，第二个不看
+
+### 常用知识
+
+**数据库管理系统（DBMS）**
+
+关系型数据库 速度慢，成本低  `Mysql  SqlServer DB2 Oracle`
+非关系型数据库 速度快，成本高`mongodb  redis`
+
+**编程语言：**
+
+面向对象  java python PHP C++
+
+面向过程   C
+
+**软件架构：**
+
+单机：
+
+C/S 客户端 服务端client/server
+
+B/S browser/server 浏览器 /服务器
+
+**Dos命令**
+
+## HTML
+
+详情见前端的文件
+
+## CSS
+
+## 测试介绍
+
+> 没有经过软件测试或测试覆盖不全面的软件产品是不健全、存在风险、质量得不到保证的。
+
+**预期结果                                                                实际结果**
+
+软件测试  ！=软件调试
+
+### 测试原则：
+
+#### 所有的测试都应基于用户需求
+
+#### 在设计测试用例时，应当包括合理的输入条件和不合理的输入条件
+
+#### 缺陷发现越早，解决的代价就越小
+
+## 测试模型
+
+### 瀑布模型
+
+![截图_20230520111321](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230520111321.png)
+
+优点：
+
+1）为项目提供了按阶段划分的检查点。
+2）当前一阶段完成后，你只需要去关注后续阶段。
+3）它提供了一个模板，这个模板使得分析、设计、编码、测试和支持的方法可以在该模板下有一个共同的指导。
+
+缺点：
+
+1）各个阶段的划分完全固定，阶段之间产生大量的文档，极大地增加了工作量。
+2）由于开发模型是线性的，用户只有等到整个过程的末期才能见到开发成果，从而增加了开发风险。
+3）通过过多的强制完成日期和里程碑来跟踪各个项目阶段。
+4）瀑布模型的突出缺点是不适应用户需求的变化。
+
+### V模型
+
+![截图_20230520112225](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230520112225.png)
+
+优点：
+
+把测试人员各个阶段做的事情进行列出来
+
+缺点：
+
+V模型仅仅把测试过程作为在需求分析、系统设计及编码之后的一个阶段，忽视了测试对需求分析，系统设计的验证，需求的满足情况一直到后期的验收测试才被验证。
+解决的思路是，当一个软件开发的时候，研发人员和测试人员需要同时工作，测试在软件做需求分析的同时就会有测试用例的跟踪，这样，可以尽快找出程序错误和需求偏离，从而更高效的提高程序质量，最大可能的减少成本，同时满足用户的实际软件需求。
+
+### W模型
+
+![截图_20230520112931](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230520112931.png)
+
+**相对于V模型，W模型增加了软件开发各阶段中同步进行的验证和确认活动。**
+
+优点
+
+- 测试的活动与软件开发同步进行
+- 测试的对象不仅仅是程序，还包括需求和设计
+- 尽早发现软件缺陷可降低软件开发的成本
+
+## 测试阶段划分
+
+### 单元测试(UT)
+
+> 又称模块测试。在软件测试的开始阶段进行的测试，是软件开发过程中要进行的最低级别的测试活动，或者说是针对软件设计的最小单位程序模块进行的测试工作
+
+### 集成测试(IT)
+
+> 也称为组装测试或联合测试。集成就是把多个单元组合起来形成更大的单元。在单元测试的基础上，将所有模块按照设计要求组装成为子系统或系统，进行集成测试。
+
+### 系统测试(ST)
+
+> 将已经集成好的软件系统，作为整个基于计算机系统的一个元素，与计算机硬件、外设、某些支持软件、数据和人员等其他系统元素结合在一起，在实际运行（使用）环境下，对计算机系统进行一系列测试工作。
+
+### 验收测试（VT）
+
+**UT，IT，ST 测试比较**
+
+- 测试方法不同
+
+  - 单元测试属于白盒测试范畴
+
+  - 集成测试属于灰盒测试范畴
+  - 系统测试属于黑盒测试范畴
+
+- 考察范围不同
+  - 单元测试主要测试模块之内的数据结构、逻辑控制、异常处理等
+  - 集成测试主要测试模块之间的接口和接口间数据传递关系，以及模块组合后的整体功能
+  - 系统测试主要测试整个系统相对于需求的符合程度
+
+- 评估基准不同
+  - 单元测试的评估基准主要是逻辑覆盖率
+  - 集成测试的评估基准主要是接口覆盖率，路径覆盖率
+  - 系统测试的评估基准主要是测试用例对需求规格的覆盖率
+
+- α测试 内测 开发环境
+
+- β测试 公测  实际环境/生产环境
+- UAT测试 用户验收测试   相关的用户或独立的测试人员根据测试计划和结果对系统进行测试和接收。
+
+### 软件测试流程图
+
+## 软件测试类型（重要）
+
+### 功能测试
+
+> 功能测试就是对产品的各功能进行验证，根据功能测试用例，逐项测试，检查产品是否达到用户要求的功能。
+
+### 性能测试
+
+> 相对于当前软件什消耗的资源，它的产出能力。
+> 性能测试是通过自动化的测试工具模拟多种正常、异常的条件来对系统的各项性能指标进行测试。
+
+### 接口测试
+
+> 接口测试是测试系统组件间接口的一种测试。接口测试主要用于检测外部系统与系统之间以及内部各个子系统之间的交互点。测试的重点是要检查数据的交换，传递和控制管理过程，以及系统间的相4逻辑依敕关系等。
+
+### 兼容性测试
+
+> 兼容性测试（Compatibility Test Suite）简称CTS，指对所设计程序与硬件、软件之间的兼容性的测试。分为浏览器兼容测试和分辨率兼容测试两类。
+
+### 用户体验测试
+
+> 用户体验测试（user experience）顾名思义就是测试人员在将产品交付客户之前处于用户角度进行的·系列体验使用，如：界面是否友好（吸引用眼球，给其眼前一亮）、操作是否流畅、功能是否达到用户使用要求等。
+
+### 安全测试
+
+> 验证软件是否贝能让授权用户提供功能使用。
+
+```
+用软件测试6个类型描述电梯：
+z
+
+
+
+```
+
+## 软件测试的方法
+
+| 测试对象         | 分类     | 分类       |
+| ---------------- | -------- | ---------- |
+| 测试对象进行分类 | 白盒测试 | 黑盒测试   |
+| 检测对象是否执行 | 静态测试 | 动态测试   |
+| 测试手段进行分类 | 手工测试 | 自动化测试 |
+
+### 白盒测试
+
+>  基于代码的测试
+
+测试方法：
+
+代码检查：静态
+
+逻辑覆盖：动态
+
+基本路径测试-动态
+
+### 黑盒测试
+
+>  又称功能测试，基于需求规格说明的测试
+
+### 静态测试
+
+> 不运行软件的测试，测试代码和文档
+
+### 动态测试
+
+>  运行项目进行测试，进行功能测试
+
+### 手工测试
+
+> 灵活改变测环境和操作
+
+### 自动化测试
+
+> 使用自动化脚本和工具，可以处理人为不能操作的数据，进行测试
+
+## 缺陷
+
+### 缺陷的定义
+
+> - 1）软件未实现需求规格说明书要求的功能。（预期：1+1=2；实际：1+1=3）
+> - 2）软件出现了需求规格说明书指明不应该出现的错误。（需求：永不崩溃：实际：死机
+> - 3）软件实现了需求规格说明书未提到的功能。（需求：加减乘除；实际：加减乘除、开平方根）
+> - 4）软件未实现需求规格说明书虽未明确提及但应该实现的目标。（ECshop电子商城订单查询需求中未规定，要不要实现？）
+> - 5）软件难以理解、不易使用、运行缓慢或者--从测试员的角度看--最终用户会认为不好。
+
+### 缺陷的属性
+
+```
+01标识（Identifier）
+02类型（Headline）
+03描述（Description）
+04严重程度（Severity）
+05优先级（Priority）
+06状态（State）
+```
+
+### 缺陷类型
+
+### 缺陷等级
+
+#### 致命
+
+> 系统任何一个主要功能完全丧失，系统无法执行、崩溃或严重资源不足、应用模块无法启动或异常退出、无法测试、造成系统不稳定，用户数据受到破坏，或者危机人身安全；
+
+#### 严重
+
+> 系统的主要功能部分丧失，数据不能保存，系统的次要功能完全丧失，系统所提供的功能或服务受到明显的影响，不能执行正常工作功能或实现重要功能。
+
+#### 一般
+
+> 系统的次要功能没有完全实现，但不影响用户的正常使不会影响系统稳定性的
+
+#### 较小
+
+> 使操作者不方便或遇到麻烦，但它不影响功能的操作和执行，如个别不影响产品理解的错别字、文字排列不整齐等一些小问题，重点指系统的U问题：
+
+### 缺陷优先级
+
+#### 立即解决
+
+>  缺陷导致系统几乎不能使用或者测试不能继续，需立即修复：
+
+#### 高优先级
+
+> 缺陷严重，影响测试，需要优先考虑：
+
+#### 正常排队
+
+> 缺陷需要正常排队等待修复：
+
+#### 低优先级
+
+> 缺陷可以在开发人员有时间的时候被纠正。
+
+### 缺陷状态
+
+新建---激活/打开----拒绝---已修正/已修复---关闭---重新打开---推迟
+
+缺陷报告：
+
+![](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230521221136-1684678303377-2.png)
+
+![截图_20230521221204](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230521221204.png)
+
+### 缺陷报告的基本元素
+
+![截图_20230521221808](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230521221808.png)
+
+### 软件质量的六大特性
+
+**功能性**
+
+**可靠性**
+
+**易用性**
+
+**效率**
+
+**维护性**
+
+**可移植性**
+
+### 软件质量管理（SQM）由哪些构成？
+
+**SQA（软件质量保证）+SQC（软件质量控制）**
+
+SQA：事先的质量保证活动，以预防为主，通过制定相应的体系，流程，规范降低出错几率，通过控制流程，检查输出来确保品质是否满足于标准。
+
+SQC：事后的质量检验活动，以测试为主，期望并发现错误，以体系要求运作，通过具体实施来检验产品来确保符合规定
+
+## 敏捷开发
+
+### 优势：
+
+**迭代性开发**
+
+敏捷开发确实是项目进入实质开发迭代阶段，用户很快可以看到一个基线架构版产品的模式。敏捷注重市场快速反应能力，也即具体应对能力，客户前期满意度高。
+
+1、敏捷开发属于增量式开发，对于需求范围不明确，需求变更较多的项目而言，可以很大程度上响应及拥抱变化。
+2、**对于互联网产品而言，市场风向转变很快，需要一种及时快速的交付形式，而敏捷开发则能更好地适用于此。**
+3、敏捷开发可最大程度体现80/20法则的价值，通过增量迭代，每次都优先交付那能产生80号价值效益的20号功能。能最大化单位成本收益。
+
+### 特点：
+
+1.人员交流重于过程与工具
+
+2.可以工作的软件胜过面面俱到的文档
+
+3.客户合作胜过合同谈判
+
+4.响应变化胜过遵循计划
+
+### 小结：
+
+总的来说，在现在管理项目过程中，并没有严格的按照完全的敏捷或者完全的瀑布模式，都是各自掺杂了其他的方式。在实际项目过程中，过于强调模式并没有意义，重要的是能不能预防问题的发生，在问题发生之后能不能用最小的成本解决，模式更多起一个参考作用。
+
+## 测试用例
+
+### 优缺点
+
+**优点：**
+
+1、把软件产品需求转换为一种可操作的步骤，方便以后有步骤有计划的进行测试。
+
+2、验证软件产品的需求是否合理
+
+3、监督产品对需求做出更加详细的设计
+
+4、记录软件产品的设计细节，保障以后的查阅
+
+5、与产品的沟通加深了测试人员对软件产品的认识和印象
+
+6、反应测试进度
+
+7、帮助拓展测试范围，扩大测试覆盖面，发现软件中潜藏的缺陷
+
+8、方便回归测试，复查bug是否还会出现
+
+9、为紧急情况下的测试提供参考信息
+
+10、培训新人，提高新人测试效率，节省对新人的指导时间。
+
+**缺点：**
+
+1、增加了测试的维护成本
+
+2、消耗了时间成本
+
+## 黑盒测试方法
+
+### 等价类划分法(只考虑条件)
+
+有效等价类：需求说明中规定的（要注意边界值，再考虑中间随意值
+
+无效等价类：与有效相反的（其他特殊情况：中文、英文、特殊符号、空、空格）。
+
+划分测试用例
+
+1）为每一个等价类规定一个唯一的编号：
+2）设计一个新的测试用例，使其尽可能多地覆盖尚未被覆盖地有效等价类，重复这一步，直到所有的有效等价类都被覆盖为止：
+3）设计一个新的测试用例，使其仅覆盖一个尚未被覆盖的无效等价类，重复这一步，直到所有的无效等价类都被覆盖为止。
+
+> 有两个输入框，接收用户输入1~100的整数，输出为2个整数的和
+
+![截图_20230523112603](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230523112603.png)
+
+QQ账号：
+
+![截图_20230524114513](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230524114513.png)
+
+### 边界值分析法(考虑到范围)
+
+等价类划分法中的边界值只考虑边界值，边界值分析法，除了考虑边界之外还考虑边界前后
+
+>  除了考虑之前的边界之外，还要考虑前后的数值
+
+![截图_20230524224727](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230524224727.png)
+
+### 错误推测法（辅助）
+
+> 基于经验和直觉推测程序中所有可能存在的各种错误，从而有针对性的设计测试用复制高完下刻线划词泽，例的方法。基本思想：列举出程序中所有可能有的错误和容易发生错误的特殊情况，根据他们选择测试用例。
+
+> 错误推测法的要素共有三点，分别为：经验、知识、直觉。
+
+### 因果图法
+
+**为什么使用？**
+
+> 等价类划分法和边界值分析方法都是着重考虑输入条件，但没有考虑输入条件的各种组合、输入条件之间的相互制约关系。这样虽然各种输入条件可能出错的情况已经测试到了，但多个输入条件组合起来可能出错的情况却被忽视了。
+
+画法：
+
+1）通常在因果图中用C（cause）表示原因，用E（expected）表示结果，各结点表示状态，可取值“0”或“1”。“0”表示某状态不出现，“1”表示某状态出现。
+
+![截图_20230524225825](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230524225825.png)
+
+![截图_20230524225938](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230524225938.png)
+
+案例1：
+
+![截图_20230524230358](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230524230358.png)
+
+![截图_20230524231350](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230524231350.png)
+
+案例2：
+
+![截图_20230524232447](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230524232447.png)
+
+### 判定表/决策表（代替因果图，条件与条件的不同组合）
+
+**使用方法：**
+
+> 即：针对不同罗辑条件的组合值，分别执行不同的操作。判定表很话合于处理这类问题。
+
+规则的合并
+
+![截图_20230525103041](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230525103041.png)
+
+**判定表的建立步骤：**
+1）确定规则的个数。假如有n个条件。每个条件有两个取值（0,1），故有2^种规则。
+2）列出所有的条件桩和动作桩。
+3）填入条件项。
+4）填入动作项，得到初始判定表。
+5）合并相似规则。
+
+**案例**
+
+> 问题要求：”..…对功率大于50马力的机器且维修记录不全或已运行10年以上的机器，应给予优先的维修处理”。这里假定，“维修记录不全”和优先维修处理”均己在别处有更严格的定义。请建立判定表。
+
+![截图_20230525112627](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230525112627.png)
+
+![截图_20230525113240](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230525113240.png)
+
+### 正交试验法
+
+**用途：**
+
+> 如果有很多的因赛变化制约着一个软件功能的变化，那么实验量会非常的大，正交试验法就是一种能够大幅度减少试验次数而且并不会降低试验可行度的方法。
+
+找出的部分的点应该：均匀分散，齐整可比
+
+如何使用：
+
+> 正交试验设计，是研究多因素多水平的一种试验设计方法。从全面试验中挑选出部分有代表性的点进行试验，这些有代表性的点具备均匀分散，齐整可比的特点。正交试验设计的主要工具是正交表，试验者可根据试验的因素数、因素的水平数查找相应的正交表，再依托正交表从全面试验中挑选出部分有代表性的点进行试验，可以实现以最少的试验次数达到与大量全面试验等效的结果，因此应用正交表设计试验是一种高效、快速而经济的多因素试验设计方法。
+
+**利用正交实验设计测试用例的步骤：**
+1）确定试验因素及水平数：
+
+2）选用合适的正交表；
+
+3）列出试验方案（测试用例）；
+
+![截图_20230525124712](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230525124712.png)
+
+水平数^因数  --目的为了找正交表
+
+**正交表**
+
+![截图_20230526221010](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230526221010.png)
+
+![截图_20230526221719](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230526221719.png)
+
+> 1. 如果正交表能找到水平数和因素数一模一样的，直接选取正交表
+>
+> 2. 如果不能找到一模一样的，
+>    1. 2v2以内，正交表中的因素数加起来大于等于题目中的因素数加起来，正交表中的水平数分别>=题目中的水平数
+
+测试用户模板：
+
+![截图_20230526223327](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230526223327.png)
+
+![截图_20230526223700](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230526223700.png)
+
+用例编号：`项目名称-模块名称-001`
+
+所属模块：系统管理   （没有明显的父模块，写系统模块）
+
+子模块：部门管理
+
+![截图_20230526225141](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230526225141.png)
+
+
+
+![截图_20230526230029](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230526230029.png)
+
+![截图_20230526230414](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230526230414.png)
+
+案例
+
+![截图_20230603070853](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603070853.png)
+
+**测试等价类**
+
+![截图_20230603073325](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603073325.png)
+
+![截图_20230603071047](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603071047.png)
+
+测试用
+
+![截图_20230603073304](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603073304.png)
+
+![截图_20230603073248](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603073248.png)
+
+# Linux
+
+## 目录结构
+
+![截图_20230603080204](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603080204.png)
+
+![截图_20230603080505](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603080505.png)
+
+![截图_20230603080443](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603080443.png)
+
+![截图_20230603081017](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230603081017.png)
+
+## 基础命令
+
+		文件的颜色
+			白色、黑色-普通的文件
+			绿色-可执行文件
+			蓝色-目录
+			红色-压缩文件
+
+### 常用命令
+
+```txt			
+cd-进入文件
+ls
+    ls-l  详细信息
+    ls-a 显示所有文件
+        可以不进目录查看其他文件夹里面的文件
+    ls -al
+pwd-打开当前的路径
+--help  命令的帮助信息
+touch filename--新建文件
+    创建多个，可以touch 后面加多个路径
+rm 文件名  
+    删除文件
+mkdir   文件夹名   新建文件夹
+rmdir  文件夹名   删除空文件夹
+rm 文件夹名 -r 删除非空文件夹
+cp 源目录 目标目录
+    多个源，最后一个写目标地址
+cp -r 源目录，目标目录 拷贝目录
+    cp 源 目标 -r
+mv 源目录 目标目录
+查找
+	find  find 路径 -name  xxxxx（正则）
+	find -atime  +10  查找10天前的访问的时间
+	find -atime -10 查找10天内的访问的时间
+	根据文件大小   find -size  
+	复合查询  find 路径 -size +20k -a size -50k
+	find在目录里找文件
+	grep 在文件中找内容 grep 内容 文件名
+	
+路径的说明
+    相对路径-相对于当前目录的路径
+    绝对路径-相对于根的路径
+
+搜索命令
+	where is 命令  查询命令存放的路径以及帮助文档所存在的位置
+		-b 可执行文件（命令所在的为准）   -m  [帮助文档所存放的位置]
+	which 命令  查看命令所存放的位置	 并且查看别名【alias】
+	
+```
+
+### 压缩解压
+
+```js
+zip（对原文件不会有影响）：
+	压缩： zip 压缩后的文件名 压缩的文件名
+			压缩目录，zip -r 压缩后的文件名 压缩的文件名
+	解压：unzip 压缩文件名
+gz：
+	压缩：gzip 文件名（源文会消失）  压缩目录
+		 gzip -r 目录 不能压缩目录，压缩的是目录里面的文件
+	解压：gunzip 压缩包名
+		gunzip -r 目录
+解压缩
+    tar -zvxf压缩
+    tar -cvxf解压
+```
+
+
+
+### 杂七杂八
+
+```txt
+		相关的命令
+			
+		其他快捷键
+			ctrl+shift+ + 放大字体
+			ctrl+— 缩小字体
+			ctrl+s 停止终端输出
+			ctrl+q 恢复终端输出
+
+				vsplit分屏
+					ctrl+wW 切换窗口
+```
+
+### vim命令
+
+```c
+		vim编辑器
+			基于vi的升级版
+			俩个模式
+				命令模式（默认）
+					保存/退出等命令
+						q!强制退出
+						wq保存退出
+						w保存
+				插入模式
+					按esc退出
+					按insert进入插入模式
+			vim编辑器的复制粘贴剪贴
+				yy 					复制
+				dd					剪贴
+				p					粘贴
+```
+
+### 权限管理
+
+#### 权限介绍
+
+![截图_20230604075122](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230604075122.png)
+
+#### 用户管理
+
+```js 
+添加用户（会一起创建一个用户组）
+	useradd 用户名 
+---
+查用户组：
+	cat /etc/passwd
+添加组
+	groupadd  组名  
+查组的信息
+	cat /etc/group
+useradd - G 组名 用户名  （新建之后还是会生成用户名这个组但是会将这个用户添加到 这个组名里面）
+	usermod 修改用户组
+		user -G 组名 用户名
+删除用户
+	userdel 用户名（只删除用户和同名的用户组，要求用户组里面没有其他人）
+    userdel -f 用户名  强制删除
+   groupdel 组名 删除当前的组，用户组中没有和组名同名的
+   
+  useradd创建的用户
+  	可以使用userdel删除
+  	删除不了，使用groupdel删除组
+  使用groupadd创建
+  	使用groupdel删除
+```
+
+**切换用户登录**
+
+> passwd 用户名
+
+#### 权限修改
+
+**权限添加：**`chmod u+x,g+w,o+x 123.txt`
+
+**权限删除：**`chmod u-x,g+w,o+x 123.txt`
+
+`chmod a-w 123.txt`可以全部去除减权限
+
+`= 覆盖权限``- 删除权限` `+ 添加权限`
+
+**权限数字表达式**
+
+| r    | w    | x    |
+| ---- | ---- | ---- |
+| 4    | 2    | 1    |
+
+| 7    | rwx  |
+| ---- | ---- |
+| 6    | rw-  |
+| 5    | r-x  |
+| 4    | r--  |
+| 3    | -wx  |
+| 2    | -w-  |
+| 1    | --x  |
+| 0    | ---  |
+
+![截图_20230604105309](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230604105309.png)
+
+### 服务
+
+`systemctl restart/start/stop/status/disable/enable`
+
+**查看进程**
+
+`ps -ef`
+
+# 测试 
+
+## 软件测试流程
+
+1. 需求评审：对需求说明书和产品原型中不清楚的地方或者有疑问的部分提出问题，由产品进行解释或者对有需要改的部分进行记录并修改，再次进行评审直到评审通过，
+
+2. 测试计划：由测试管理人员对整个测试活动制定计划，估计工作量，安排人力物力资源，评估风险测试计划也需要进行评审，
+
+3. 测试方案：根据测试计划，进行测试策略的设计，完成测试方案测试方案也需要进行评审，
+
+4. 测试实现：根据测试计划和测试方案完成测试用例的设计与编写测试用例也需要进行评审。
+   组内评审：同行评审   主要有测试小组内部的成员之间进行
+
+​      组外评审：专家评审    开 发，测试，产品，管理层参与 比同行评审严格
+
+5. 测试执行。根据测试计划和测试用例对被测软件进行测试，提交BUG并且跟踪修复，执行回归测试
+   1. 搭建测试环境
+      1. 安装与部署被测的系统
+      2. 安装测试工具
+   2. 执行测试
+      1. 冒烟测试：主要业务流程书否可以跑通
+      2. 第一轮测试：筛选正向的测试用例，测试系统的功能是否正常实现。
+      3. 第二轮测试：筛选反向的测试用例，对第一轮测试中发现的ug进行回归测试，并执行以反向为主的测试，包括第一轮中出问题的正向测试
+      4. 第三轮测试：对前两轮中发现的ug进行回归测试，并执行以正向为主的测试，包括前两轮中出问题的测试用例（包括正向和反向），但是主要以正向测试为主，
+      5. 封包测试：在上线之前再次对软件执行测试，主要关注正向测试用例，该阶段如果发现缺陷，如果不是很严重的基本上推迟修复。
+      6. 上线测试：一般上线测试是在晚上12点之后进行上线，进行线上环境的测试，保证软件能正常运行使用。
+   3. 测试总结：对整个测试活动进行总结，对软件质量进行评估，提出建议，对测试文档进行归档。
+
+## 缺陷的生命周期 
+
+> ![截图_20230605083611](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230605083611.png)
+
+测试用例的元素
+
+缺陷报告包含：
+
+> ![截图_20230605084031](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230605084031.png)
+
+## 测试计划和测试方案：
+
+### 测试计划
+
+是描述要进行的测试活动、方法、资源和进度文档
+
+核心内容：
+
+> 范围和目标
+>
+> 角色与职责
+>
+> 进度与资源
+>
+> 风险与应对
+>
+> 准入与准出（测试接收开发提交的版本的标准，测试人员完成测试提交给运维发布的标准）
+
+### 测试方案
+
+> 概念：是从测试的技术角度去分析需求，在方向上明确要怎么测试，主要是测试策略与技术实现核心内容：
+> 方法环境
+> （Jmeter,BugFree,DBMonster,TPTest,Selenium,loadrunner...）
+
+项目实战：
+
+> 测试用例：
+>
+> ![截图_20230608082421](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230608082421.png)
+>
+> ![截图_20230608082739](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230608082739.png)
+
+![截图_20230608083318](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230608083318.png)
+
+轮播图的功能:
+
+![截图_20230608084837](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230608084837.png)
+
+轮播图的测试用例
+
+![截图_20230609092319](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230609092319.png)
+
+商品列表
+
+![截图_20230609100844](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230609100844.png)
+
+![截图_20230609102249](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230609102249.png)
+
+购物车的功能点：
+
+![截图_20230616183734](E:\Code\Front-end-learning-notes\Markdown\软件测试.assets\截图_20230616183734.png)
+
+## 禅道
+
+
 
