--- a/Markdown/常用.md
+++ b/Markdown/常用.md
@@ -130,6 +130,8 @@ pnpm add -D prisma typescript @types/node @types/mockjs @nestjs/mapped-types @ty
 
 ## prisma
 
+`npx prisma init 初始化prisma`
+
 > pr==npx prisma 
 >
 > npx prisma migrate dev   提交生成
